--- a/ThongKe/appsettings.json
+++ b/ThongKe/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=118.68.170.128;database=thongke;Trusted_Connection=true;User Id=vanhong;Password=Hong@2019;Integrated security=false;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=118.68.170.128;database=thongke_1;Trusted_Connection=true;User Id=vanhong;Password=Hong@2019;Integrated security=false;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
