--- a/ThongKe/ThongKe.csproj
+++ b/ThongKe/ThongKe.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200211040211_changeAccountName.cs" />
+    <Compile Remove="Migrations\20200211040211_changeAccountName.Designer.cs" />
+    <Compile Remove="Migrations\20200211040254_changeAccountName.cs" />
+    <Compile Remove="Migrations\20200211040254_changeAccountName.Designer.cs" />
+    <Compile Remove="Migrations\20200211062220_changeAccountName.cs" />
+    <Compile Remove="Migrations\20200211062220_changeAccountName.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EPPlus" Version="4.5.3.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.1">
