--- a/ThongKe/appsettings.json
+++ b/ThongKe/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=118.68.170.128;database=thongke_1;Trusted_Connection=true;User Id=vanhong;Password=Hong@2019;Integrated security=false;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=118.68.170.128;database=thongke_1;Trusted_Connection=true;User Id=vanhong;Password=Hong@2019;Integrated security=false;MultipleActiveResultSets=true",
+    "DefaultKDOB": "Server=118.68.170.128;database=qlkdtr;Trusted_Connection=true;User Id=vanhong;Password=Hong@2019;Integrated security=false;MultipleActiveResultSets=true",
+    "DefaultKDND": "Server=118.68.170.128;database=qlkdtrnoidia;Trusted_Connection=true;User Id=vanhong;Password=Hong@2019;Integrated security=false;MultipleActiveResultSets=true",
+    "DefaultKDIB": "Server=118.68.170.128;database=SaleDoanIB;Trusted_Connection=true;User Id=vanhong;Password=Hong@2019;Integrated security=false;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
